[metadata]
name = mistral-ansible-actions
author = Dougal Matthews
author-email = dougal@redhat.com
summary = A Mistral action to execute Ansible playbooks
description-file = README.rst
home-page = https://github.com/d0ugal/mistral-ansible-actions
license = Apache-2
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Internet
    Topic :: Utilities

[files]
packages =
    mistral_ansible_actions

[wheel]
universal = 1

[entry_points]
mistral.actions = 
    ansible = mistral_ansible_actions:AnsibleAction
    ansible-playbook = mistral_ansible_actions:AnsiblePlaybookAction
